[new tool] Add ktlint to maintain the consistency of code, fix some issues.