@@ -28,8 +28,8 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
-		<kotlin.version>1.9.25</kotlin.version>
+		<java.version>23</java.version>
+		<kotlin.version>2.1.0</kotlin.version>
 		<junit.jupiter.version>5.10.0</junit.jupiter.version>
 		<mockito.kotlin.version>5.2.1</mockito.kotlin.version>
 	</properties>
@@ -94,6 +94,13 @@
 			<version>5.11.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Dependency for linter to check better pratices and avoid bikeshedding-->
+		<dependency>
+			<groupId>com.pinterest.ktlint</groupId>
+			<artifactId>ktlint-cli</artifactId>
+			<version>1.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -148,6 +155,59 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>ktlint</id>
+						<phase>verify</phase>
+						<configuration>
+							<target name="ktlint">
+								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
+									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
+									<!-- Note: the JVM arg below is only required when running ktlint with Java 16+ in format mode.
+                                    <jvmarg value="-add-opens=java.base/java.lang=ALL-UNNAMED"/>
+                                    -->
+									<!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+									<arg value="src/**/*.kt"/>
+								</java>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>ktlint-format</id>
+						<configuration>
+							<target name="ktlint">
+								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
+									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
+									<!-- Note: the JVM args below is only required when running ktlint with Java 16+ in format mode -->
+									<jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+									<!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+									<arg value="-F"/>
+									<arg value="src/**/*.kt"/>
+								</java>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.pinterest.ktlint</groupId>
+						<artifactId>ktlint-cli</artifactId>
+						<version>1.5.0</version>
+					</dependency>
+					<!-- additional 3rd party ruleset(s) can be specified here -->
+				</dependencies>
+			</plugin>
+
 		</plugins>
 	</build>
 
